integrasi rest API index post / berita [done]

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>SMK INDONESIA</title>
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/fontawesome/css/all.min.css">
-    <!-- <link rel="stylesheet" href="/assets/css/styles.css"> -->
+    <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body style="background: #e2e8f0;">
     <div id="app"></div>
